syntax = "proto3";

package nibiru.sudo.v1;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";

option go_package = "github.com/NibiruChain/nibiru/v2/x/sudo";

message Sudoers {
  // Root: The "root" user.
  string root = 1;

  // Contracts: The set of contracts with elevated permissions.
  repeated string contracts = 2;
}

// GenesisState: State for migrations and genesis for the x/sudo module.
message GenesisState {
  nibiru.sudo.v1.Sudoers sudoers = 1 [(gogoproto.nullable) = false];
  nibiru.sudo.v1.ZeroGasActors zero_gas_actors = 2;
}

// ZeroGasActors: Actors that can execute zero gas transactions against a set of
// smart contracts.
message ZeroGasActors {
  // Senders: Addresses that can sign for zero gas transactions from the contract
  // set.
  repeated string senders = 1;

  // Contracts: contract addresses that can be invoked by "senders" with zero gas
  // costs.
  repeated string contracts = 2;
}
