syntax = "proto3";

package nibiru.sudo.v1;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "nibiru/sudo/v1/state.proto";

option go_package = "github.com/NibiruChain/nibiru/v2/x/sudo";

// Msg defines the x/sudo module's Msg service. Protobuf `Msg` services are
// called from `BaseApp` instances during `DeliverTx`. The `Msg` service will be
// responsible for processing `sdk.Msg` requests.
service Msg {
  // EditSudoers updates the "Sudoers" state
  rpc EditSudoers(MsgEditSudoers) returns (MsgEditSudoersResponse) {
    option (google.api.http).post = "/nibiru/sudo/edit_sudoers";
  }

  rpc ChangeRoot(MsgChangeRoot) returns (MsgChangeRootResponse) {
    option (google.api.http).post = "/nibiru/sudo/change_root";
  }

  // EditZeroGasActors updates the "ZeroGasActors" state. Zero gas actors are
  // a set of accounts that can execute zero gas transactions against a
  // whitelisted  set of smart contracts.
  rpc EditZeroGasActors(MsgEditZeroGasActors) returns (MsgEditZeroGasActorsResponse) {
    option (google.api.http).post = "/nibiru/sudo/edit_zero_gas_actors";
  }
}

// -------------------------- EditSudoers --------------------------

// MsgEditSudoers: Msg to update the "Sudoers" state.
message MsgEditSudoers {
  // Action: identifier for the type of edit that will take place. Using this
  // action field prevents us from needing to create several similar message
  // types.
  string action = 1;

  // Contracts: An input payload.
  repeated string contracts = 2;

  // Sender: Address for the signer of the transaction.
  string sender = 3;
}

// MsgEditSudoersResponse indicates the successful execution of MsgEditSudeors.
message MsgEditSudoersResponse {}

// -------------------------- ChangeRoot --------------------------

// MsgChangeRoot: Msg to update the "Sudoers" state.
message MsgChangeRoot {
  // Sender: Address for the signer of the transaction.
  string sender = 1;

  // NewRoot: New root address.
  string new_root = 2;
}

// MsgChangeRootResponse indicates the successful execution of MsgChangeRoot.
message MsgChangeRootResponse {}

// -------------------------- EditZeroGasActors --------------------------

// MsgEditZeroGasActors: Tx msg to update the "ZeroGasActors" state.
message MsgEditZeroGasActors {
  // Actors that can execute zero gas transactions against a set of
  // smart contracts.
  nibiru.sudo.v1.ZeroGasActors actors = 1 [(gogoproto.nullable) = false];

  // Sender: Nibiru Bech32 Address for the signer of the transaction.
  string sender = 2;
}

// MsgEditZeroGasActorsResponse indicates the successful execution of
// MsgEditZeroGasActors.
message MsgEditZeroGasActorsResponse {}
